# Quark

./: .gitignore  Cargo.toml  Dockerfile  README.md  WHITEPAPER.md
docs/: dashboard.html  index.html
site/: dashboard.html
src/: block.rs  ledger.rs  lib.rs  main.rs  network.rs  quark.rs  transaction.rs  validator.rs  wallet.rs
